# snowman

./: .editorconfig  README.md  flake.nix  snowman.cabal
resources/boards/: 000.board  001.board
src/: Board.hs  Game.hs  Main.hs  Player.hs  Resource.hs  Types.hs  Ui.hs
