cabal-version:  3.14
name:           snowman
version:        0.1.0.0
license-file:   COPYING
author:         frofor
maintainer:     18nraywczifc@protonmail.com
build-type:     Simple

common warnings
    ghc-options: -Wall

executable snowman
    import:            warnings
    main-is:           Main.hs
    hs-source-dirs:    src
    build-depends:     ansi-terminal ^>=1.1.4,
                       base ^>=4.21.0.0,
                       directory ^>=1.3.9.0,
                       random ^>=1.3.1,
                       text ^>=2.1.3
    other-modules:     Board, Game, Player, Resource, Types, Ui
    default-language:  GHC2024
